--- a/shiftweb5-aula04/src/main/resources/static/html/usuario-editar.html
+++ b/shiftweb5-aula04/src/main/resources/static/html/usuario-editar.html
@@ -18,27 +18,40 @@
 
     $(document).ready(function () {
 
-
         var campoCpf = $("#cpf");
         campoCpf.mask('000.000.000-00', { reverse: true });
+
+        var idUsuario = 1;
+
+        var endpoint = "http://localhost:8080/usuario/" + idUsuario;
+
+        var headerGet = {
+            method: 'GET',
+            header: { 'Content-type': 'application/json' }
+        };
+
+        fetch(endpoint, headerGet)
+            .then(response => response.json())
+            .then(data => {
+                $("#idUsuario").val(data.idUsuario);
+                $("#nome").val(data.nome);
+                $("#idade").val(data.idade);
+                $("#email").val(data.email);
+                $("#cpf").val(data.cpf);
+                $("#foto").val(data.foto);
+                $("#senha").val(data.senha);
+            })
+            .catch(erro => alert('Problemas no GET da API'));
+
 
 
         $("#botaoGravar").click(function () {
 
-            if ($("#nome").val() == '') {
-                alert('Digite o campo nome!');
-                $("#nome").focus();
-                return;
-            }
-
-
             var dadosFormulario = new FormData($("#formUsuario").get(0));
             var usuarioJson = Object.fromEntries(dadosFormulario.entries());
 
-            var endpoint = "http://localhost:8080/usuario";
-
             var header = {
-                method: 'POST',
+                method: 'PUT',
                 body: JSON.stringify(usuarioJson),
                 headers: {
                     'Content-type': 'application/json; charset=UTF-8'
@@ -48,13 +61,7 @@
             fetch(endpoint, header)
                 .then(function (response) {
                     if (response.ok) {
-                        $("#nome").val('');
-                        $("#idade").val('');
-                        $("#email").val('');
-                        $("#cpf").val('');
-                        $("#foto").val('');
-                        $("#senha").val('');
-                        alert('Usuário cadastrado com sucesso');
+                        alert('Usuário alterado com sucesso');
                     } else {
                         alert('Não foi possível efetuar o cadastro');
                     }
@@ -72,16 +79,11 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="well">
-                <h2>Usuário - Novo</h2>
+                <h2>Usuário - Editar</h2>
 
                 <form id="formUsuario" name="formUsuario" method="post" enctype="multipart/form-data">
-                    <!--
-                    <div class="form-group">
-                        <label for="idUsuario" class="control-label">Id:</label>
-                        <input id="idUsuario" name="idUsuario" type="text" class="control-label" />
-                    </div>
-                    -->
 
+                    <input id="idUsuario" name="idUsuario" type="hidden" class="control-label" />
                     <div class="form-group">
                         <label for="nome" class="control-label">Nome:</label>
                         <input id="nome" name="nome" type="text" class="control-label" />
