Página editar funcionando para mostrar os dados do usuário pasando o ID

--- a/shiftweb5-aula04/src/main/resources/static/html/usuario-editar.html
+++ b/shiftweb5-aula04/src/main/resources/static/html/usuario-editar.html
@@ -21,7 +21,7 @@
         var campoCpf = $("#cpf");
         campoCpf.mask('000.000.000-00', { reverse: true });
 
-        var idUsuario = 1;
+        var idUsuario = getUrlParameter("idUsuario");
 
         var endpoint = "http://localhost:8080/usuario/" + idUsuario;
 
@@ -70,6 +70,22 @@
         });
 
     });
+
+    var getUrlParameter = function getUrlParameter(sParam) {
+        var sPageURL = window.location.search.substring(1),
+            sURLVariables = sPageURL.split('&'),
+            sParameterName,
+            i;
+
+        for (i = 0; i < sURLVariables.length; i++) {
+            sParameterName = sURLVariables[i].split('=');
+
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+            }
+        }
+        return false;
+    };
 
 </script>
 
